overflow fixed

--- a/code/src/pages/Detail/Detail.css
+++ b/code/src/pages/Detail/Detail.css
@@ -7,6 +7,7 @@
   max-width: 100vw;
   max-height: 100vh;
   display: grid;
+  grid-template-rows: 0.5rem -webkit-min-content -webkit-min-content 1rem;
   grid-template-rows: 0.5rem min-content min-content 1rem;
   grid-template-columns: 1fr 250px 1fr;
   grid-gap: 1rem 2rem;
@@ -22,6 +23,7 @@
   opacity: 0.6;
   grid-row: 1 / 6;
   grid-column: 1 / 4;
+  -o-object-fit: cover;
   object-fit: cover;
   background-position: center;
 }
@@ -29,6 +31,7 @@
 .hero-image {
   max-width: 100%;
   max-height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
   overflow: hidden;
   grid-row: 1 / -1;
@@ -38,6 +41,13 @@
 .hero-image::after {
   display: block;
   position: relative;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(0, 0, 0, 0)),
+    to(#000)
+  );
   background-image: linear-gradient(rgba(0, 0, 0, 0), #000 100%);
   background-position: top center;
   background-size: cover;
@@ -61,12 +71,15 @@
 
 .detail-flex img {
   border: 6px #fff solid;
+  -o-object-fit: contain;
   object-fit: contain;
   width: 100%;
   height: 100%;
 }
 
 .detail-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -77,6 +90,8 @@
 }
 
 .button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   color: #fff;
   text-decoration: none;
@@ -86,20 +101,24 @@
 }
 
 .button:hover > p {
+  -webkit-transform: translate(5px);
   transform: translate(5px);
 }
 
 ion-icon {
   font-size: 2rem;
+  -ms-flex-item-align: center;
   align-self: center;
 }
 
 .button p {
+  -ms-flex-item-align: center;
   align-self: center;
   margin-top: 0;
   margin-left: 0.2rem;
   font-size: 1.2rem;
   font-weight: 500;
+  -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
@@ -110,10 +129,11 @@ ion-icon {
 
 @media (min-width: 551px) {
   .detail {
+    grid-template-rows: 1rem -webkit-min-content 1rem;
     grid-template-rows: 1rem min-content 1rem;
+    grid-template-columns: 2rem 300px minmax(-webkit-min-content, 400px) 1fr;
     grid-template-columns: 2rem 300px minmax(min-content, 400px) 1fr;
     grid-gap: 1rem 4rem;
-    overflow: hidden;
   }
 
   #detail-description {
